Oriented bordism definition (absolute and relative)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "'es",
+        "'et",
         "abelian",
+        "Abgabe",
+        "Arbeit",
         "basepoint",
         "bijective",
         "bordant",
@@ -9,20 +13,30 @@
         "Cobordism",
         "cohomology",
         "diffeomorphism",
+        "diffeomorphisms",
         "Eilenberg",
         "Freudenthal",
+        "Gebortsort",
+        "Geburtsdatum",
+        "globales",
         "Grassmannians",
         "homeomorphic",
         "homotopy",
+        "Namen",
         "neighbourhood",
         "nullbordant",
         "nullbordism",
         "paracompact",
         "Pontryagin",
+        "propri",
+        "Quelques",
         "Steenrod",
         "subcomplex",
         "submanifold",
         "Thom",
-        "Unoriented"
+        "Unoriented",
+        "vari",
+        "Verfassers",
+        "Verlag"
     ]
 }
