unoriented bordism, many examples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,10 @@
         "globales",
         "Grassmannians",
         "homeomorphic",
+        "Homologie",
+        "homotopic",
         "homotopy",
+        "Mannigfaltigkeiten",
         "Namen",
         "neighbourhood",
         "nullbordant",
