Definition Thom space

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,36 +7,48 @@
         "Arbeit",
         "basepoint",
         "bijective",
+        "bilinearity",
         "bordant",
         "bordism",
         "bordisms",
         "Cobordism",
         "cohomology",
+        "compactification",
+        "definedness",
         "diffeomorphism",
         "diffeomorphisms",
         "Eilenberg",
+        "Euclideanness",
         "Freudenthal",
         "Gebortsort",
         "Geburtsdatum",
         "globales",
         "Grassmannians",
+        "Hausdorffness",
         "homeomorphic",
         "Homologie",
         "homotopic",
         "homotopy",
+        "Injectivity",
         "Mannigfaltigkeiten",
         "Namen",
         "neighbourhood",
         "nullbordant",
         "nullbordism",
+        "orientable",
         "paracompact",
+        "pointwise",
         "Pontryagin",
+        "preimage",
+        "preimages",
         "propri",
         "Quelques",
         "Steenrod",
         "subcomplex",
         "submanifold",
+        "Surjectivity",
         "Thom",
+        "uncountably",
         "Unoriented",
         "vari",
         "Verfassers",
