pictures, collar theorem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "cohomology",
         "compactification",
         "definedness",
+        "diffeomorphic",
         "diffeomorphism",
         "diffeomorphisms",
         "Eilenberg",
@@ -35,6 +36,7 @@
         "neighbourhood",
         "nullbordant",
         "nullbordism",
+        "nullhomotopic",
         "orientable",
         "paracompact",
         "pointwise",
