--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "Steenrod",
         "subcomplex",
         "submanifold",
+        "submanifolds",
         "Surjectivity",
         "Thom",
         "uncountably",
