sard, homotopy, les

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "subcomplex",
         "submanifold",
         "submanifolds",
+        "surjective",
         "Surjectivity",
         "Thom",
         "uncountably",
