--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "nullbordant",
         "nullbordism",
         "nullhomotopic",
+        "orientability",
         "orientable",
         "paracompact",
         "pointwise",
