--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "bordisms",
         "Cobordism",
         "cohomology",
+        "Commentarii",
         "compactification",
         "definedness",
         "diffeomorphic",
@@ -47,6 +48,7 @@
         "propri",
         "Quelques",
         "Steenrod",
+        "Stiefel",
         "subcomplex",
         "submanifold",
         "submanifolds",
