mehr anmerkungen (jetzt sollten alle bisher in rot drinstehen oder schon angepasst sein)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "preimages",
         "propri",
         "Quelques",
+        "smoothable",
         "Steenrod",
         "Stiefel",
         "subcomplex",
