--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,19 +12,23 @@
         "bordism",
         "bordisms",
         "Cobordism",
+        "codimension",
         "cohomology",
         "Commentarii",
         "compactification",
         "definedness",
+        "Dieck",
         "diffeomorphic",
         "diffeomorphism",
         "diffeomorphisms",
         "Eilenberg",
         "Euclideanness",
         "Freudenthal",
+        "functors",
         "Gebortsort",
         "Geburtsdatum",
         "globales",
+        "Grassmannian",
         "Grassmannians",
         "Hausdorffness",
         "homeomorphic",
@@ -33,6 +37,7 @@
         "homotopy",
         "Injectivity",
         "Mannigfaltigkeiten",
+        "Milnor",
         "Namen",
         "neighbourhood",
         "nullbordant",
@@ -47,6 +52,7 @@
         "preimages",
         "propri",
         "Quelques",
+        "Riemannian",
         "smoothable",
         "Steenrod",
         "Stiefel",
