--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "Cobordism",
         "codimension",
         "cohomology",
+        "colimit",
         "Commentarii",
         "compactification",
         "definedness",
